# hyprvisor

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: deploy.yml  nightly_build.yml  pre_release.yml  rust.yml  stable_build.yml  test_build.yml
app/: Cargo.toml
app/src/: client.rs  common_types.rs  error.rs  global.rs  hyprland_listener.rs  logger.rs  main.rs  opts.rs  server.rs  server_response.rs  utils.rs
app/src/application/: client.rs  mod.rs  server.rs  standalone.rs  types.rs  utils.rs
app/src/application/types/: client_info.rs  mod.rs  subscription_id.rs
app/src/bluetooth/: listener.rs  mod.rs  types.rs
app/src/hyprland/: listener.rs  mod.rs  types.rs  utils.rs  window.rs  workspaces.rs
app/src/hyprland/types/: event.rs  mod.rs  socket_type.rs  window.rs  workspace.rs
app/src/hyprland_listener/: types.rs  window.rs  workspaces.rs
app/src/ipc/: message.rs  mod.rs  trait_impl.rs  traits.rs  utils.rs
app/src/wifi/: iwd_listener.rs  listener.rs  mod.rs  types.rs
client/: Cargo.toml
client/src/: client.rs  common.rs  main.rs
hyprvisor-client/: Cargo.toml
hyprvisor-client/src/: client.rs  main.rs
hyprvisor-server/: Cargo.toml
hyprvisor-server/src/: common.rs  hypr_listener.rs  main.rs  server.rs
server/: Cargo.toml
server/src/: common.rs  hypr_listener.rs  server.rs
src/: main.rs
systemd/: hyprvisor.service
