[workspace]
members = ["app"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
