[package]
name = "hyprvisor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
# lazy_static = "1.4.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
# regex = "1.10.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
