[package]
name = "hyprvisor"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fern = "0.7.0"
humantime = "2.1.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
iwdrs = "0.1.5"
once_cell = "1.20.2"
bincode = "1.3.3"
futures = "0.3.31"
bluer = { version = "0.17.3", features = ["full"] }
